# MonopilyIlCavoCoassiale

./: CMakeLists.txt  README.txt  logComputer.txt  logHuman.txt
include/: Casella.h  Casella_laterale.h  Computer.h  Giocatore.h  Human.h  Tabellone.h  Variabili.h
src/: Casella.cpp  Casella_laterale.cpp  Computer.cpp  Game.cpp  Giocatore.cpp  Human.cpp  Tabellone.cpp  TestTabellone.cpp
